# jfrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml  Example.java  tuning_notes.md
example/src/: main.rs
scripts/: Example.java  generate-jfr.sh
src/: lib.rs
src/reader/: byte_reader.rs  byte_stream.rs  constant_pool.rs  de.rs  event.rs  metadata.rs  mod.rs  type_descriptor.rs  types.rs  v1.rs  value_descriptor.rs
src/reader/v1/: byte_reader.rs  constant_pool.rs  metadata.rs  mod.rs  type_descriptor.rs  value_descriptor.rs
test-data/: invalid.jfr  profiler-alloc.jfr  profiler-lock.jfr  recording-2_1.jfr  recording.jfr
