[package]
name = "jfrs"
version = "0.1.4"
edition = "2021"
authors = ["Haruki Okada <ocadaruma@gmail.com>"]

description   = "Java Flight Recorder reader for Rust"
repository    = "https://github.com/ocadaruma/jfrs"
keywords      = ["java", "jfr", "file-format"]
license       = "Apache-2.0"
readme        = "./README.md"
categories    = ["parser-implementations"]

exclude = ["/test-data"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
rustc-hash = "1.1.0"

[features]
cstring = []
